# brinder-match-api/src/main/java/org/gso/brinder/match/model/GeoLocation.java
@@ -1,0 +1,15 @@
+package org.gso.brinder.match.model;
+
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+public class GeoLocation {
+
+    private Float latitude;
+    private Float longitude;
+}
